fix spacing between headers

--- a/shared/css/course-blocks.scss
+++ b/shared/css/course-blocks.scss
@@ -22,6 +22,9 @@
 } 
 
 .coursesheader {
+  h1 + h2 {
+    margin-top: 10px;
+  }
   h2 {
     margin-bottom: 5px;
   }
